Fixed Height Issue for Input on Mobile

--- a/src/app/chat/chat-widget/chat-widget.component.scss
+++ b/src/app/chat/chat-widget/chat-widget.component.scss
@@ -90,7 +90,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: -webkit-fill-available;
+    height: -webkit-fill-available!important;
     height:100vh;
     width: 100vw;
     margin: 0;
